# quorum

./: docker-compose.yml  setup.cfg
api/: .pre-commit-config.yaml  Dockerfile  manage.py  pyproject.toml
api/districts/: admin.py  models.py  serializers.py  urls.py  views.py
api/districts/migrations/: 0001_initial.py  0002_district_is_national.py  0003_initial_values.py  0004_alter_district_name.py
api/districts/tests/: conftest.py  test_models.py  test_serializers.py  test_views.py
api/parties/: admin.py  models.py  serializers.py  urls.py  views.py
api/parties/migrations/: 0001_initial.py  0002_party_name.py  0003_initial_values.py  0004_admission.py  0005_alter_admission_date.py  0006_initial_admissions.py
api/parties/tests/: conftest.py  test_admission_model.py  test_admission_serializers.py  test_admission_views.py  test_party_model.py  test_party_serializers.py  test_party_views.py
api/quorum/: asgi.py  settings.py  urls.py  views.py  wsgi.py
scrapper/: pyproject.toml  research.ipynb
scrapper/scrapper/: acts.py
scrapper/scrapper/parsers/: act_parser.py
