[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = "Scrappers to obtain data from the honorable chamber of deputies of Argentina"
authors = ["Armando Ezequiel Puerta <armando.ezequiel.puerta@gmail.com>"]
license = "MIT License"
homepage = "https://github.com/EzequielPuerta/quorum"
repository = "https://github.com/EzequielPuerta/quorum"
documentation = "https://github.com/EzequielPuerta/quorum"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
